# Vuln-Dev-Room

./: .env.example  .eslintrc.json  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
prisma/: schema.prisma  seed.ts
services/agent-runtime/: .env.example  README.md  pyproject.toml
services/agent-runtime/app/: config.py  main.py  notifier.py
services/agent-runtime/app/api/: dependencies.py  routes.py  schemas.py
services/agent-runtime/app/graph/: backend_agent.py  prompts.py  state.py
services/agent-runtime/app/models/: base.py  configured_model.py  fake_model.py
services/agent-runtime/app/persistence/: artifacts.py  checkpoints.py  db.py  runs.py
services/agent-runtime/app/sandbox/: base.py  docker_sandbox.py
services/agent-runtime/app/security/: paths.py  redaction.py  service_auth.py
services/agent-runtime/app/tests/fixtures/: build_repo.py
services/agent-runtime/app/tests/fixtures/agentguard-demo/: README.md
services/agent-runtime/app/tests/fixtures/agentguard-demo/backend/: rate_limiter.py
services/agent-runtime/app/tests/integration/: conftest.py  test_graph.py  test_sandbox.py
services/agent-runtime/app/tests/unit/: test_config.py  test_fake_model.py  test_patching.py  test_paths.py  test_redaction.py  test_resume_routes.py
services/agent-runtime/app/tools/: diff.py  patching.py  repository.py  tests.py
services/agent-runtime/docker/: build-offline-sandbox.sh  sandbox.Dockerfile
src/: auth.ts  env.ts  liveblocks.config.ts
(+81 files in other folders)
